Fix language type error